@@ -39,7 +39,7 @@
     <scm>
         <connection>scm:git::https://github.com/adobe/log-parser.git</connection>
         <developerConnection>scm:git:https://github.com/adobe/log-parser.git</developerConnection>
-        <url>https://github.com/adobe/log-parser/tree/master</url>
+        <url>https://github.com/adobe/log-parser/tree/main</url>
         <tag>HEAD</tag>
     </scm>
     <distributionManagement>
@@ -58,19 +58,24 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>2.22.0</version>
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+                    <argLine>
+                        --illegal-access=permit
+                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
+                        ${argLine}
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <!-- License information -->
@@ -283,6 +288,8 @@
         <license.dir>${basedir}</license.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <sonar.organization>adobeinc</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <powermock.version>2.0.2</powermock.version>
     </properties>
     <reporting>
